# server_log_test

./: .gitignore  Agr.cpp  Agr.h  CMakeLists.txt  Date.cpp  Date.h  LogLoader.cpp  LogLoader.h  build.sh  create_dataset.cpp  main.cpp  output_example.json  serialized.json  split.h  test.cpp  timeformat.h  ua_single.json  user-action.h
DatasetCreator/: DatasetCreator.cpp  DatasetCreator.h  create_dataset.cpp
fileio/: fileio.cpp  fileio.h  test_fileio.cpp
log-dir/: file1.json  file2.json  file3.json
